# simple-os-release

./: LICENSE  README.md  simple-os-release.cabal
src/: SimpleOsRelease.hs
