cabal-version:       2.2
name:                simple-os-release
version:             0.1.0
synopsis:            simple-os-release project
description:
        Short paragraph here
license:             MIT
license-file:        LICENSE
author:              Jens Petersen <juhpetersen@gmail.com>
maintainer:          Jens Petersen <juhpetersen@gmail.com>
copyright:           2024  Jens Petersen <juhpetersen@gmail.com>
category:            Unclassified
homepage:            https://github.com/juhp/simple-os-release
bug-reports:         https://github.com/juhp/simple-os-release/issues
build-type:          Simple
--  extra-doc-files:     README.md
--                       ChangeLog.md
-- tested-with:         GHC == 8.10.7
--                       || == 9.0.2
--                       || == 9.2.8
--                       || == 9.4.8
--                       || == 9.6.5
--                       || == 9.8.2

source-repository head
  type:                git
  location:            https://github.com/juhp/simple-os-release.git

library
  build-depends:       base < 5,
                       directory,
                       extra
  default-language:    Haskell2010
  exposed-modules:     SimpleOsRelease
  hs-source-dirs:      src

  ghc-options:         -Wall
  if impl(ghc >= 8.0)
    ghc-options:       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.10)
    ghc-options:       -Wunused-packages
